ash-code/tui/src/snapshots/issues__tests__issue_browser_20x12.snap
---
source: ash-code/tui/src/issues_tests.rs
expression: text
---
─ Issues ───────────
                    
   Open    Closed   
  ╭──────────────╮  
  │ Search keywor│  
  ╰──────────────╯  
  team/repo · 0 se  
> [ ] #3 first      
  [ ] #5 second
