ash-code/tui/src/snapshots/issues__tests__issue_browser_closed.snap
---
source: ash-code/tui/src/issues_tests.rs
expression: text
---
─ Issues ───────────────────────────────────────────────────────────────────────
                                                                                
   Open    Closed                                                               
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ Search keywords or #number                                               │  
  ╰──────────────────────────────────────────────────────────────────────────╯  
  team/repo · 1 selected · 1 loaded · Updated                                   
  [ ] #18 Already resolved
